# bibval

./: .gitignore  Cargo.toml  LICENSE  README.md  try-it-out.bib
src/: cache.rs  entry.rs  fusion.rs  lib.rs  main.rs  matcher.rs  parser.rs  report.rs
src/validators/: arxiv.rs  crossref.rs  dblp.rs  mod.rs  semantic.rs  zenodo.rs
tests/fixtures/: sample.bib
