[package]
name = "bibval"
version = "0.1.0"
edition = "2021"
description = "Validate BibTeX/BibLaTeX references against academic databases"
license = "MIT"
repository = "https://github.com/femtomc/bibval"

[dependencies]
biblatex = "0.10"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.37", features = ["serialize"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
strsim = "0.11"
indicatif = "0.17"
colored = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
async-trait = "0.1"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
